# gateway-service

./: .flake8  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml  setup.cfg
.github/workflows/: code-quality.yml
src/gateway_service/: config.py  main.py  services.py
src/gateway_service/api/: docs.py  health.py  services.py
